# Transport_Cataloge

./: main  main.cpp
Transport_Cataloge/: .gitignore  CMakeLists.txt  geo.h  input_reader.cpp  input_reader.h  main  main.cpp  stat_reader.cpp  stat_reader.h  transport_catalogue.cpp  transport_catalogue.h  команды терминала
